<resources>
    <string name="app_name">PRIOR</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="already_have_account">Already Have Account !</string>
    <string name="phone_number">Phone Number</string>
    <string name="main_page_selected">Page is selected</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="loginsm">Login</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="you_don_t_have_an_account">You don\'t have an Account ?</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="code">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="code_description">Enter one time password sent on +919284723808</string>
    <string name="verify_code">Verify Code</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_details">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="make_selection_details">Select which contact detail should we use to reset your password?</string>
    <string name="via_sms">Via SMS:</string>
    <string name="via_mail">Via Mail:</string>
    <string name="new_credential">New\nCredential</string>
    <string name="new_credential_details">Your identity has been verified! set your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="pass_update_success_message">Your password has been updated</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="booking">Booking</string>
    <string name="shopping">Shopping</string>
    <string name="appointment">Appointment</string>
    <string name="application_preference">Application Preference</string>
    <string name="account">Account</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="help_and_privacy">Help and Privacy</string>
    <string name="help_and_faq">Help and FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="exit">Exit</string>
    <string name="exit_dialog">Are you sure you want to exit this app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help">Help</string>
    <string name="view_all">View All</string>
    <string name="address">Address</string>
    <string name="view_more">View More</string>
    <string name="our_services">Our Services</string>
    <string name="appoint">Appoint</string>
    <string name="hotels">Hotels</string>
    <string name="restaurant">Restaurant</string>
    <string name="flights">Flights</string>
    <string name="taxi">Taxi</string>
    <string name="trains">Trains</string>
    <string name="bus">Bus</string>
    <string name="Movie">Movie</string>
    <string name="see_all">See All</string>
    <string name="electronics">Electronic</string>
    <string name="fashion">Fashion</string>
    <string name="books">Books</string>
    <string name="grocery">Grocery</string>
    <string name="kitchen">Kitchen</string>
    <string name="medicines">Medicines</string>
    <string name="hospital">Hospital</string>
    <string name="saloon">Saloon</string>
    <string name="meetings">Meetings</string>
    <string name="starts_from">Starts From</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="state">State*</string>
    <string name="district">District*</string>
    <string name="submit">Submit</string>
    <string name="title_desc">Learning Multiple Spinners (Populating Second Spinner based on the Selection of First Spinner)
        \n \n Using Names of Indian States in First Spinner.
        \n On selecting a State, Second Spinner is populated with the Names of Districts belonging to the selected State.
    </string>
    <string name="shop_location">Shop Location</string>
    <string name="shop_name">Shop Name</string>
    <string name="vendor_register">Vendor Register</string>
    <string name="vendor_login">Vendor Login</string>
    <string-array name="array_country">
        <item>Select Your Country</item>
        <item>India</item>
        <item>Nepal</item>
        <item>Sri Lanka</item>
        <item>Bangladesh</item>
    </string-array>
    <string-array name="array_default_state">
        <item>Select Your State</item>
    </string-array>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
</resources>