<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
            <item
                android:icon="@drawable/ic_baseline_home_24"
                android:id="@id/nav_home"
                android:title="@string/home" />
            <item
                android:icon="@drawable/ic_baseline_categories_24"
                android:id="@id/nav_categories"
                android:title="@string/categories" />
            <item
                android:icon="@drawable/ic_baseline_booking_24"
                android:id="@+id/nav_booking"
                android:title="My Bookings" />
            <item
                android:icon="@drawable/ic_baseline_buying_24"
                android:id="@+id/nav_buying"
                android:title="Cart" />
            <item
                android:icon="@drawable/ic_baseline_appointment_24"
                android:id="@+id/nav_appointment"
                android:title="My Appointments" />
        </group>

        <item android:title="@string/application_preference">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:icon="@drawable/ic_baseline_account_circle_24"
                        android:id="@id/nav_account"
                        android:title="@string/account" />
                    <item
                        android:icon="@drawable/ic_baseline_settings_24"
                        android:id="@id/nav_setting"
                        android:title="@string/settings" />
                    <item
                        android:icon="@drawable/ic_baseline_dark_mode_24"
                        android:id="@+id/nav_dark"
                        android:title="@string/dark_theme" />
                </group>
            </menu>
        </item>

        <item android:title="@string/help_and_privacy">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:icon="@drawable/ic_baseline_help_center_24"
                        android:id="@+id/nav_help"
                        android:title="@string/help_and_faq" />
                    <item
                        android:icon="@drawable/ic_baseline_privacy_24"
                        android:id="@+id/nav_privacy"
                        android:title="@string/privacy_policy" />
                    <item
                        android:icon="@drawable/ic_baseline_terms_24"
                        android:id="@+id/nav_terms"
                        android:title="@string/terms_and_conditions" />
                    <item
                        android:icon="@drawable/ic_baseline_logout_24"
                        android:id="@+id/logout"
                        android:title="@string/logout" />
                </group>
            </menu>
        </item>

</menu>